adding placeholder form

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -54,24 +54,24 @@
 
       <div class="row">
         <div class="col-md-4">
-          <img src="/home/josee/Desktop/hhh.JPG" class="img-thumbnail github-avatar" alt="Profile Image">
+          <img src="hhh.JPG" class="img-circle" width="80" height="80" >
         </div>
         <div class="col-md-8">
           <div class="start">
-              <span class="label label-default">{{profile.public_repos}} Public Repos</span>
-              <span class="label label-primary">{{profile.public_gist}} Public Gist</span>
-              <span class="label label-success">{{profile.followers}} Followers</span>
-              <span class="label label-info">{{profile.following}} Following</span>
-              <br>
+              <span class="label label-default">{{profile.public_repos}} Public Repos</span>               
+              <span class="label label-primary">{{profile.public_gist}} Public Gist</span> 
+               <span class="label label-success">{{profile.followers}} Followers</span> 
+             <span class="label label-info">{{profile.following}} Following</span> 
+            <br>
 
           <!-- Content With User-info -->
 
             <ul class="list-group">
-                <li class="list-group-item"><strong>Username:</strong> {{profile.login}}</li>
-                <li class="list-group-item"><strong>Location:</strong> {{profile.location}}</li>
-                <li class="list-group-item"><strong>Email:</strong> {{profile.email}}</li>
-                <li class="list-group-item"><strong>Bio:</strong> {{profile.bio}}</li>
-                <li class="list-group-item"><strong>Member Since:</strong> {{profile.created_at}}</li>
+                <li class="list-group-item"><strong>Username: Mukjos30</strong> {{profile.login}}</li>
+                <li class="list-group-item"><strong>Location:Former KIE</strong> {{profile.location}}</li>
+                <li class="list-group-item"><strong>Email: mukjos30@gmail.com</strong> {{profile.email}}</li>
+                <li class="list-group-item"><strong>Bio:Success is a journey through hard working </strong> {{profile.bio}}</li>
+                 
             </ul>
 
           <!-- Collapse Content With User-info -->
@@ -102,7 +102,7 @@
                                     <p>{{repo.description}}</p>
                                     <!-- View on Github Button -->
 
-                                    <h4><a href="{{repo.html_url}}" target="_blank">View on github</a></h4>
+                                    <!-- <h4><a href="{{repo.html_url}}" target="_blank">View on github</a></h4> -->
                                 </div>
 
                                 <div class="col-md-3">
