--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,110 @@
-<!-- Latest compiled and minified CSS -->
+ <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-  crossorigin="anonymous">
-  <!-- <nav  class="navbar navbar-inverse navbar-fixed-top" style="height: 7%;">
+crossorigin="anonymous">
+
+
+<!--Nav Bar At The Top-->
+
+<nav  class="navbar navbar-inverse navbar-fixed-top" style="height: 7%;">
+  <div class="container">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+          aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+    </div>
+      <div id="navbar" class="collapse navbar-collapse">
+          <a style="list-style: none;" class="navbar-brand" href="#">
+            <li>
+              <img id="anim" src="assets/images/duck.gif" alt="github image" height="80" width="80" style=" margin-top: -20%;">
+            </li>
+          </a>
+
+          <ul class="navbar-nav">
+              <li><form action=""><div class="form-group"><input type="text" style="margin-top: 7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" name="username"  (keyup.Enter)="findProfile()"></div></form></li>
+          </ul>
+      </div>
+     
+  </div>
+</nav>
+
+ 
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-3">
+            <img src="{profile.avatar_url}" class="img-circle img responsive" alt="Profile Image">
+          </div>
+      <div class="col-md-8">
+        <div class="start">
+            <ul class="list-group">
+                <li class="list-group-item"><strong>Username:</strong> {{profile.login}}</li>
+                <li class="list-group-item"><strong>Location:</strong> {{profile.location}}</li>
+                <li class="list-group-item"><strong>Email:</strong> {{profile.email}}</li>
+                <li class="list-group-item"><strong>Bio:</strong> {{profile.bio}}</li>
+                <li class="list-group-item"><strong>Member Since:</strong> {{profile.created_at}}</li>
+            </ul>
+            <p>
+            <span class="label label-default">{{profile.public_repos}} Public Repos</span>
+            <span class="label label-primary">{{profile.public_gist}} Public Gist</span>
+            <span class="label label-success">{{profile.followers}} Followers</span>
+            <span class="label label-info">{{profile.following}} Following</span>
+          </p>
+            <br>
+        </div>
+      </div>
+      </div>
+      </div>
+   
+
+ 
+
+
+<!-- REPOSITORIES -->
+        <div class="panel panel-default">
+          
+      <div class="panel-body">
+          <div class="row">
+                  <!-- Looop To Display Repos -->
+                  <div class="col-md-12">
+                      <div *ngFor="let repo of repos">
+                          <div class="row">
+                              
+                              <!-- Div To Display Repositories -->
+                              <div class="col-md-9">
+                                  <!-- Repo Name -->
+                                  <h3>{{repo.name}}</h3>
+                                  <!-- Repo Description -->
+                                  <p>{{repo.description}}</p>
+                                  <!-- View on Github Button -->
+
+                                
+                              </div>
+
+                              <div class="col-md-3">
+                                  <span class="label label-default">{{repo.watchers}} Stars </span>
+                                  <span class="label label-primary">{{repo.forks}} Forks </span>
+                              </div>
+
+                          </div>
+                          
+                      </div>
+                  </div>
+          </div>
+      </div>
+  </div>
+
+
+    
+ 
+
+<!-- COLLAPSE REPOSITORIES -->
+
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+   crossorigin="anonymous">
+  <nav  class="navbar navbar-inverse navbar-fixed-top" style="height: 7%;">
       <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -16,20 +119,20 @@
               <a style="list-style: none;" class="navbar-brand" href="#">
                 <!-- <li>
                   <img id="" src="" alt="github image" height="80" width="80" style=" margin-top: -20%;">
-                </li> -->
-              </a>
+                <!-- </li> -->
+              <!-- </a> -->
   
-              <!-- <ul class="navbar-nav"> -->
-                <!-- <p>profile works!</p><p><p>profile works!</p><p>profile works!</p>profile works!</p> -->
-               <!-- <li> <form action=""><div class="form-group"><input type="text" style="margin-top: 7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="name"  (keyup)="findProfile()"></div></form></li>
-              </ul> -->
-          <!-- </div>
+              <!-- <ul class="navbar-nav"> -
+               <p>profile works!</p><p><p>profile works!</p><p>profile works!</p>profile works!</p> -->
+                <!-- <li> <form action=""><div class="form-group"><input type="text" style="margin-top: 7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="name"  (keyup)="findProfile()"></div></form></li> -->
+              <!-- </ul> 
+         </div>
          
       </div>
-  </nav> --> 
-  
+  </nav>   -->
+     
 
-   <div *ngif="profile">
+   <!-- <div *ngif="profile">
      <div class='panel panel-default'>
        <div class="panel-heading">
          { profile.name}<small> {profile.login}</small>
@@ -63,13 +166,13 @@
                
     
               <!-- Collapse Content With User-info -->
-    
+<!--     
               </div>
            </div>
          </div>
        </div>
      </div>
-   </div>
+   </div> --> 
 
 <!-- <nav  class="navbar navbar-inverse navbar-fixed-top" style="height: 7%;">
     <div class="container">
@@ -84,43 +187,43 @@
       </div>
         <div id="navbar" class="collapse navbar-collapse">
             <a style="list-style: none;" class="navbar-brand" href="#"> -->
-              <!-- <li>
+               <!-- <li>
                 <img id="" src="" alt="github image" height="80" width="80" style=" margin-top: -20%;">
               </li> -->
-            <!-- </a> -->
+            <!-- </a> 
 
-            <!-- <ul class="navbar-nav"> -->
-              <!-- <p>profile works!</p><p><p>profile works!</p><p>profile works!</p>profile works!</p> -->
-             <!-- <li> <form action=""><div class="form-group"><input type="text" style="margin-top: 7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="name"  (keyup)="findProfile()"></div></form></li>
-            </ul>
-        </div>
+             <ul class="navbar-nav"> 
+              <p>profile works!</p><p><p>profile works!</p><p>profile works!</p>profile works!</p> -->
+              <!-- <li> <form action=""><div class="form-group"><input type="text" style="margin-top: 7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="name"  (keyup)="findProfile()"></div></form></li>
+            </ul> -->
+        <!-- </div>
        
-    </div>
-</nav> -->
+    </div> -->
+<!-- </nav>   -->  
 
 
-    <!-- <div class="panel-body"> -->
+     <!-- <div class="panel-body">
 
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-md-4">
           <img src="{{profile.avatar_url}}" class="img-thumbnail github-avatar" alt="Profile Image">
-        </div>
+        </div> -->
        
-        </ul>
+        <!-- </ul>
         <div class="col-md-8">
            <ul class="list-group">
             <li class="list-group-item"><strong>Username:</strong> {{profile.login}}</li>
             <li class="list-group-item"><strong>Location:</strong> {{profile.location}}</li>
             <li class="list-group-item"><strong>Email:</strong> {{profile.email}}</li>
             <li class="list-group-item"><strong>Bio:</strong> {{profile.bio}}</li>
-            <li class="list-group-item"><strong>Member Since:</strong> {{profile.created_at}}</li>
-        
+            <li class="list-group-item"><strong>Member Since:</strong> {{profile.created_at}}</li> -->
+<!--         
           <div class="start">
               <span class="label label-default">{{profile.public_repos}} Public Repos</span>
               <span class="label label-primary">{{profile.public_gist}} Public Gist</span>
               <span class="label label-success">{{profile.followers}} Followers</span>
               <span class="label label-info">{{profile.following}} Following</span>
-              <br>
+              <br>  -->
 
           <!-- Content With User-info -->
 
@@ -130,25 +233,25 @@
 
           <!-- </div>
         </div>
-   -->
+  
 
 
 <!-- REPOSITORIES -->
           
         <!-- <div class="panel-body">
             <div class="row">
-                    <!-- Looop To Display Repos -->
-                    <!-- <div class="col-md-12">
+                    <Loop To Display Repos -->
+                     <!-- <div class="col-md-12">
                         <div *ngFor="let repo of repos">
                             <div class="row">
                                 
-                                <!-- Div To Display Repositories -->
-                                <!-- <div class="col-md-9"> -->
-                                    <!-- Repo Name -->
-                                    <!-- <h3>{{repo.name}}</h3> -->
-                                    <!-- Repo Description -->
-                                    <!-- <p>{{repo.description}}</p>
-                                    View on Github Button -->
+                                < Div To Display Repositories -->
+                                 <!-- <div class="col-md-9"> -->
+                                    <!-- < Repo Name -->
+                                   <!-- <h3>{{repo.name}}</h3> 
+                                    Repo Description 
+                                    <p>{{repo.description}}</p>
+                                    View on Github Button  --> 
 
                                     <!-- <h4><a href="{{repo.html_url}}" target="_blank">View on github</a></h4>
                                 </div>
@@ -161,9 +264,9 @@
                             </div>
                             
                         </div>
-                    </div>
-            </div>
-        </div> -->
-       
+                    </div> -->
+            <!-- </div> -->
+        <!-- </div> -->
+      
 
 <!-- COLLAPSE REPOSITORIES -->
