--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -17,11 +17,12 @@ crossorigin="anonymous">
         </button>
     </div>
       <div id="navbar" class="collapse navbar-collapse">
-          <a style="list-style: none;" class="navbar-brand" href="#">
-            <li>
-              <img id="anim" src="assets/images/duck.gif" alt="github image" height="80" width="80" style=" margin-top: -20%;">
-            </li>
-          </a>
+         <a style="list-style: none;" class="navbar-brand" href="#">
+            <!-- <li>
+              <img id="anim" src="assets/images/duck" alt="github image" height="80" width="80" style=" margin-top: -20%;">
+            </li> -->
+          </a> 
+
 
           <ul class="navbar-nav">
               <li><form action=""><div class="form-group"><input type="text" style="margin-top: 7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" name="username"  (keyup.Enter)="findProfile()"></div></form></li>
@@ -36,23 +37,19 @@ crossorigin="anonymous">
         <div class="row">
           <div class="col-sm-3">
             <img src="{profile.avatar_url}" class="img-circle img responsive" alt="Profile Image">
-          </div>
+         
       <div class="col-md-8">
         <div class="start">
-            <ul class="list-group">
-                <li class="list-group-item"><strong>Username:</strong> {{profile.login}}</li>
-                <li class="list-group-item"><strong>Location:</strong> {{profile.location}}</li>
-                <li class="list-group-item"><strong>Email:</strong> {{profile.email}}</li>
-                <li class="list-group-item"><strong>Bio:</strong> {{profile.bio}}</li>
-                <li class="list-group-item"><strong>Member Since:</strong> {{profile.created_at}}</li>
-            </ul>
+        
             <p>
-            <span class="label label-default">{{profile.public_repos}} Public Repos</span>
-            <span class="label label-primary">{{profile.public_gist}} Public Gist</span>
+           
+            <span class="label label-primary">{{profile.public_gists}} Public gists</span>
             <span class="label label-success">{{profile.followers}} Followers</span>
             <span class="label label-info">{{profile.following}} Following</span>
+            <span class="label label-default">{{profile.public_repos}} Public Repos</span>
           </p>
-            <br>
+          <h4><a href="{{profile.html_url}}">View on github</a></h4>
+            
         </div>
       </div>
       </div>
