--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
   <nav  class="navbar navbar-inverse navbar-fixed-top" style="height: 7%;">
     <div class="container">
       <ul class="navbar-nav">
-         <li><form action=""><div class="form-group"><input type="text" style="margin-top: 7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="username"  (keyup.Enter)="findProfile()"></div></form></li>
+         <li><form action=""><div class="form-group"><input type="text" style="margin-top:2%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="username"  (keyup.Enter)="findProfile()"></div></form></li>
             </ul>
            </div>
           </nav>
@@ -20,6 +20,14 @@
               <span class="label label-success">{{profile.followers}} Followers</span>
               <span class="label label-info">{{profile.following}} Following</span>
               <div class="panel panel-default">
+                <br>
+                  <ul class="list-group">
+                      <li class="list-group-item"><strong>Username:</strong> {{profile.login}}</li>
+                      <li class="list-group-item"><strong>Location:</strong> {{profile.location}}</li>
+                      <li class="list-group-item"><strong>Email:</strong> {{profile.email}}</li>
+                      <li class="list-group-item"><strong>Bio:</strong> {{profile.bio}}</li>
+                      <li class="list-group-item"><strong>Member Since:</strong> {{profile.created_at}}</li>
+                  </ul>
                 <div class="panel-body">
                   <div class="row">
                     <div class="col-md-12">
@@ -41,4 +49,6 @@
                   </div>
                 </div>
               </div>
-   
+              </div>
+              </div>
+   </div>
