--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,9 +3,9 @@
   crossorigin="anonymous">
   <nav  class="navbar navbar-inverse navbar-fixed-top" style="height: 7%;">
     <div class="container">
-       
-         <form action=""><div class="form-group"><input type="text" style="margin-top:2%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="username"  (keyup.Enter)="findProfile()"></div></form></li>
-            
+      <ul class="navbar-nav">
+          <form action=""><div class="form-group"><input type="text" style="margin-top:7%;  width: 130%; height: 15%;background-color: rgb(70, 68, 68); border: none; color: ghostwhite;" class="form-control header-search-input jump-to-field js-jump-to-field js-site-search-focus  " placeholder="search or jump to" [(ngModel)]="username" name="username"  (keyup.Enter)="findProfile()"></div></form>
+            </ul>
            </div>
           </nav>
           <div class="panel-body">
