--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,9 +1,30 @@
-/* .container{
+.form-group{
     background-color:grey;
-} */
- .list-group{
-     margin-top:100px;
- }
-.panel-title{
-    text-align: center;
 }
+ /* .list-group{
+     margin-top:100px;
+ } */
+/* .panel-title{
+    text-align: center;
+} */
+/* .container { */
+    /* position: absolute; */
+    /* top:50%;
+    left:50%; */
+    /* margin-left: 65px;
+    margin-top: 100px;
+    width: 500px; */
+    /* height: 100px;
+  */
+    /* margin-top: 50px;
+  }
+  .mid {
+    /* position: absolute; */
+  
+    /* margin-left: 400px;
+    margin-top: -400px;
+    width: 500px;
+    
+    margin-top: 50px;
+  } */
+   
